--- a/bin/main/templates/index.mustache
+++ b/bin/main/templates/index.mustache
@@ -4,7 +4,8 @@
     <div class="row">
         <div class="col-md-6">
             <a href="/board/save" role="button" class="btn btn-primary">글 등록</a>
-        </div>
+            <a href="/registration" role="button" class="btn btn-primary">회원가입</a>
+            <a href="/login-form" role="button" class="btn btn-primary">로그인</a>
     </div>
 </div>
 <br>
