Update file delete function. Update api path.

--- a/bin/main/templates/index.mustache
+++ b/bin/main/templates/index.mustache
@@ -22,7 +22,7 @@
     {{#boards}}
         <tr>
             <td>{{id}}</td>
-            <td><a href="/board/update/{{id}}">{{title}}</a></td>
+            <td><a href="/board/read/{{id}}">{{title}}</a></td>
             <td>{{author}}</td>
             <td>{{modifiedDate}}</td>
         </tr>
