--- a/src/main/resources/templates/boards-read.mustache
+++ b/src/main/resources/templates/boards-read.mustache
@@ -11,7 +11,7 @@
             </div>
             <div class="form-group">
                 <label for="title">제목</label>
-                <input type="text" class="form-control" id="title" value="{{board.title}}">
+                <input type="text" class="form-control" id="title" value="{{board.title}}" readonly>
             </div>
             <div class="form-group">
                 <label for="author"> 작성자 </label>
@@ -19,17 +19,17 @@
             </div>
             <div class="form-group">
                 <label for="content"> 내용 </label>
-                <textarea class="form-control" id="content">{{board.content}}</textarea>
+                <textarea class="form-control" id="content" readonly>{{board.content}}</textarea>
             </div>
         </form>
         {{#board.filePath}}
             <div>
-            <img src={{.}}> <button type="button" class="btn-delete-img" value={{.}}></button>
+                <img src={{.}}>
+                <br>
             </div>
         {{/board.filePath}}
         <a href="/" role="button" class="btn btn-secondary">취소</a>
-        <button type="button" class="btn btn-primary" id="btn-update">수정</button>
-        <button type="button" class="btn btn-danger" id="btn-delete">삭제</button>
+        <a href="/board/update/{{board.id}}" role="button" class="btn btn-secondary">수정</a>
     </div>
 </div>
 
