Add page navigator.

--- a/src/main/resources/templates/boards-read.mustache
+++ b/src/main/resources/templates/boards-read.mustache
@@ -24,7 +24,7 @@
         </form>
         {{#board.filePath}}
             <div>
-                <img src={{.}}>
+                <img src={{.}} class="img-fluid">
                 <br>
             </div>
         {{/board.filePath}}
