--- a/src/main/resources/templates/boards-update.mustache
+++ b/src/main/resources/templates/boards-update.mustache
@@ -23,8 +23,16 @@
             </div>
         </form>
         {{#board.filePath}}
-            <div>
-            <img src={{.}}> <button type="button" class="btn-delete-img" value={{.}}></button>
+            <div class="container">
+            <div class="row">
+                <div class="col-lg">
+                    <img src={{.}} class="img-fluid"> 
+                </div>
+
+                <div class="col-sm">
+                    <button type="button" class="btn btn-danger" name="btn-del-img" value={{.}}>X</button>
+                </div>
+            </div>
             </div>
         {{/board.filePath}}
         <a href="/" role="button" class="btn btn-secondary">취소</a>
