--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,4 +1,5 @@
 {{>layout/header}}
+
 <h1>게시판</h1>
 <div class="col-md-12">
     <div class="row">
@@ -9,19 +10,20 @@
 </div>
 <br>
 <!-- 목록 출력 영역 -->
+<div class="table-responsive">
 <table class="table table-horizontal table-bordered">
     <thead class="thead-strong">
     <tr>
-        <th>게시글 번호</th>
-        <th>제목</th>
-        <th>작성자</th>
-        <th>최종수정일</th>
+        <th scope="col" style="width: 15%">게시글 번호</th>
+        <th scope="col">제목</th>
+        <th scope="col">작성자</th>
+        <th scope="col" style="width: 25%">최종수정일</th>
     </tr>
     </thead>
     <tbody id="tbody">
     {{#boards}}
         <tr>
-            <td>{{id}}</td>
+            <td scope="row">{{id}}</td>
             <td><a href="/board/read/{{id}}">{{title}}</a></td>
             <td>{{author}}</td>
             <td>{{modifiedDate}}</td>
@@ -29,4 +31,17 @@
     {{/boards}}
     </tbody>
 </table>
+</div>
+
+<input type="hidden" id="maxPage" value={{maxPage}}>
+
+
+<nav aria-label="page navigator">
+<ul class="pagination justify-content-center">
+    <li id="li_prev"><a class="page-link" id="a_prev">Previous</a></li>
+    <ul class="list-group list-group-horizontal" id="navigation"></ul>
+    <li id="li_next"><a class="page-link" id="a_next">Next</a></li>
+</ul>
+</nav>
+
 {{>layout/footer}}
