--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -3,5 +3,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="/js/app/index.js"></script>
 
+<link rel="stylesheet" type="text/css" href="/css/base.css">
+
 </body>
 </html>
