--- a/src/main/resources/templates/register.mustache
+++ b/src/main/resources/templates/register.mustache
@@ -1,9 +1,9 @@
 {{>layout/header}}
 
-<h1>회원가입</h1>
+<h1 class="text-center">회원가입</h1>
 
-<div class="col-md-12">
-    <div class="col-md-4">
+<div class="container square-box">
+    <div class="col-md-8">
         <form>
 
             <div class="form-group">
