--- a/src/main/resources/templates/register.mustache
+++ b/src/main/resources/templates/register.mustache
@@ -1,32 +1,47 @@
-{{>layout/header}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<h1 class="text-center">회원가입</h1>
+    <link href="https://fonts.googleapis.com/css?family=Jua:400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" defer></script>
 
-<div class="container square-box">
-    <div class="col-md-8">
-        <form>
+    <link rel="stylesheet" href="/css/register-style.css">
+    <script src="/js/app/register.js" defer></script>
 
-            <div class="form-group">
-                <label for="title">이름</label>
-                <input type="text" class="form-control" id="name"value="{{name}}" readonly>
+    <title>Register</title>
+</head>
+<body>
+    <nav class="navbar">
+        <a href="/" class="site-name">Spring Boot Example</a>
+    </nav>
+
+    <div class="register-sector">
+        <div class="board-name">
+            <h2>등록</h2>
+        </div>
+
+        <div class="write-area">
+            <div class="write-form">
+                <div class="form-email">
+                    <label for="input-email"><b>이메일: </b></label>
+                    <input type="text" id="email" name="email" class="input-email" value="{{email}}" readonly>
+                </div>
+
+                <div class="form-nickname">
+                    <label for="input-nickname"><b>닉네임: </b></label>
+                    <input type="text" id="nickname" class="input-nickname">
+                </div>
+
+                <div class="form-btn">
+                    <button class="cancel-btn"><a href="/">취소</a></button>
+                    <button class="register-btn" id="btn-register">가입</button>
+                </div>
             </div>
-
-            <div class="form-group">
-                <label for="title">메일</label>
-                <input type="text" class="form-control" id="email" value="{{email}}" readonly>
-            </div>
-
-            <div class="form-group">
-                <label for="author">닉네임</label>
-                <input type="text" class="form-control" id="nickname">
-            </div>
-
-        </form>
-
-        <a href="/" role="button" class="btn btn-secondary">취소</a>
-        <button type="button" class="btn btn-primary" id="btn-register">가입</button>
-
+        </div>
     </div>
-</div>
-
-{{>layout/footer}}
+</body>
+</html>
