--- a/src/main/resources/templates/boards-read.mustache
+++ b/src/main/resources/templates/boards-read.mustache
@@ -31,7 +31,7 @@
                 </div>
 
                 <article class="content">
-                    {{board.content}}
+                    {{{board.content}}}
                 </article>
 
                 <div class="img-list">
