--- a/src/main/resources/templates/boards-save.mustache
+++ b/src/main/resources/templates/boards-save.mustache
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="form-btn">
-                    <button class="cancel-btn"><a href="#">글취소</a></button>
+                    <button class="cancel-btn" onclick="history.back()">취소</button>
                     <button type="button" class="save-btn" id="btn-save">등록</button>
                 </div>
             </form>
