--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -51,7 +51,7 @@
                 <th scope="col" class="article-no">No.</th>
                 <th scope="col" class="articles-title">제목</th>
                 <th scope="col" class="article-author">작성자</th>
-                <th scope="col" class="article-date">작성 날짜</th>
+                <th scope="col" class="article-date">작성일</th>
             </tr>
             <tbody id="tbody">
                 <thread>
@@ -60,7 +60,7 @@
                             <td>{{id}}</td>
                             <td><a href="/board/read/{{id}}">{{title}}</a></td>
                             <td>{{author}}</td>
-                            <td>2022-04-17</td>
+                            <td>{{modifiedDate}}</td>
                         </tr>
                     {{/boards}}
                 </thread>
